# app/Http/Resources/ClientQrResource.php
@@ -1,0 +1,22 @@
+<?php
+
+namespace App\Http\Resources;
+
+use Illuminate\Http\Request;
+use Illuminate\Http\Resources\Json\JsonResource;
+
+class ClientQrResource extends JsonResource
+{
+    /**
+     * Transform the resource into an array.
+     *
+     * @return array<string, mixed>
+     */
+    public function toArray(Request $request): array
+    {
+        return [
+            'numero_compte' => $this->resource['numero_compte'],
+            'qr_code_base64' => $this->resource['qr_code_base64'],
+        ];
+    }
+}
